# solagram

./: .gitignore  Anchor.toml  package.json  tsconfig.json
programs/plugin_api/: Cargo.toml
programs/plugin_api/src/: constants.rs  lib.rs
programs/plugin_api/src/types/: mod.rs  plugin_types.rs
programs/solagram/: Cargo.toml
programs/solagram/src/: constants.rs  errors.rs  lib.rs
programs/solagram/src/instructions/: admin_actions.rs  initialize.rs  mod.rs  profile_actions.rs
programs/solagram/src/platform/: mod.rs
programs/solagram/src/platform/instructions/: admin_actions.rs  initialize.rs  mod.rs  profile_actions.rs
programs/solagram/src/platform/states/: global_state.rs  plugin_list_state.rs  profile_state.rs
programs/solagram/src/plugin_api/: constants.rs  mod.rs
programs/solagram/src/plugin_api/instructions/: conversation_actions.rs  mod.rs  session_actions.rs
programs/solagram/src/plugin_api/states/: conversation_state.rs  mod.rs  session_state.rs  token_state.rs
programs/solagram/src/plugin_api/types/: plugin_types.rs
programs/solagram/src/state/: global_state.rs  mod.rs  profile_state.rs
programs/solagram/src/states/: global_state.rs  mod.rs  plugin_list_state.rs  profile_state.rs
programs/solagram/src/utils/: errors.rs  mod.rs
programs/solagram/src/utils/pubkeys/: mod.rs  pubkey_list.rs
programs/solagram/src/utils/validators/: mod.rs  pda_validator.rs
programs/token/: Cargo.toml
programs/token/src/: constants.rs  lib.rs
programs/token/src/instructions/: initialize.rs
programs/token/src/states/: global_state.rs
(+129 files in other folders)
