[package]
name = "token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-metadata-interface = "0.8.0"
spl-type-length-value = "0.9.0"
solagram = { path = "../solagram", features = [ "no-entrypoint", "cpi" ] }
